[gd_scene load_steps=25 format=3 uid="uid://dcteqkc6x3hje"]

[ext_resource type="Texture2D" uid="uid://ckmvf2yg5dgbd" path="res://Art/Sprites/aangfix.png" id="1_3phce"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_687op"]
[ext_resource type="PackedScene" uid="uid://cjd10gcwv0yay" path="res://Utility/hurt_box.tscn" id="3_m36la"]
[ext_resource type="Texture2D" uid="uid://b8mnrombi1roo" path="res://Art/UIArt/exp_background.png" id="4_dh28r"]
[ext_resource type="FontFile" uid="uid://cq0d432fxx0tl" path="res://Art/Fonts/Avatar Airbender.ttf" id="6_u47mo"]
[ext_resource type="Texture2D" uid="uid://cw4id3fvpnp8d" path="res://Art/UIArt/altScroll.png" id="7_4v0sy"]
[ext_resource type="AudioStream" uid="uid://cyc8cromje4ce" path="res://Audio/SFX/lvlUp.wav" id="7_tex1y"]
[ext_resource type="Texture2D" uid="uid://bbwfgbmurrear" path="res://Art/UIArt/healthbar.png" id="9_0icas"]
[ext_resource type="Texture2D" uid="uid://b807n4de4prwa" path="res://Art/UIArt/health.png" id="10_wh8d5"]
[ext_resource type="Script" path="res://Player/PlayerDeath.gd" id="11_2noli"]
[ext_resource type="AudioStream" uid="uid://bofk6ka7pdu50" path="res://Audio/SFX/deathsound.mp3" id="11_71vj4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rttbp"]
radius = 24.0
height = 86.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88pcs"]
size = Vector2(88.8512, 61.7021)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_68f5h"]
radius = 25.0
height = 96.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a2om1"]
radius = 292.043

[sub_resource type="CircleShape2D" id="CircleShape2D_hicsh"]
radius = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jol7i"]
bg_color = Color(0.972549, 0, 0.956863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cnlmx"]
bg_color = Color(0, 0.784314, 0.309804, 1)

[sub_resource type="Theme" id="Theme_68lx6"]
ProgressBar/colors/font_color = Color(0.95, 0.95, 0.95, 1)
ProgressBar/styles/background = SubResource("StyleBoxFlat_jol7i")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_cnlmx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43p8t"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 20
border_width_right = 20
border_color = Color(0.909804, 0.192157, 0, 0)
border_blend = true
shadow_color = Color(1, 0, 0, 0)
shadow_offset = Vector2(10, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygb5l"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 20
border_width_right = 20
border_color = Color(0.909804, 0.192157, 0, 0)
border_blend = true
shadow_color = Color(1, 0, 0, 0)
shadow_size = 1
shadow_offset = Vector2(10, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5uxs"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 20
border_width_right = 20
border_color = Color(0.909804, 0.192157, 0, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(1, 0, 0, 0)
shadow_size = 1
shadow_offset = Vector2(10, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4xvh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_left = 20
border_width_right = 20
border_color = Color(0.909804, 0.192157, 0, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 15.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0
shadow_color = Color(1, 0, 0, 0)
shadow_size = 1
shadow_offset = Vector2(10, 0)

[sub_resource type="Theme" id="Theme_qxw7g"]
Button/styles/disabled = SubResource("StyleBoxFlat_43p8t")
Button/styles/focus = SubResource("StyleBoxFlat_ygb5l")
Button/styles/hover = SubResource("StyleBoxFlat_e5uxs")
Button/styles/normal = SubResource("StyleBoxFlat_43p8t")
Button/styles/pressed = SubResource("StyleBoxFlat_j4xvh")

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_687op")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3phce")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.65, 0.65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 9)
shape = SubResource("CapsuleShape2D_rttbp")

[node name="Attack" type="AudioListener2D" parent="."]

[node name="RockShardTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="RockShardAttackTimer" type="Timer" parent="Attack/RockShardTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="WaterTornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="WaterTornadoAttackTimer" type="Timer" parent="Attack/WaterTornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
light_mask = 4
visibility_layer = 4
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
light_mask = 0
visibility_layer = 4
position = Vector2(5.49997, 1.49998)
scale = Vector2(33.9689, -27.6162)
shape = SubResource("RectangleShape2D_88pcs")

[node name="HurtBox" parent="." instance=ExtResource("3_m36la")]
visible = false
light_mask = 1
visibility_layer = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 8)
shape = SubResource("CapsuleShape2D_68f5h")

[node name="GrabArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
visible = false
position = Vector2(1, 9)
shape = SubResource("CircleShape2D_a2om1")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
position = Vector2(1, 9)
shape = SubResource("CircleShape2D_hicsh")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 1034.58
offset_right = 1920.0
offset_bottom = 1126.58
theme = SubResource("Theme_68lx6")
value = 50.0
texture_under = ExtResource("4_dh28r")

[node name="lbl_levelCount" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 870.0
offset_top = -1015.58
offset_right = 1050.0
offset_bottom = -963.58
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 50
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 1
layout_mode = 0
offset_left = 928.0
offset_top = 582.0
offset_right = 960.0
offset_bottom = 590.0
scale = Vector2(2, 2)
value = 100.0
texture_over = ExtResource("9_0icas")
texture_progress = ExtResource("10_wh8d5")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 2500.0
offset_top = 171.0
offset_right = 3181.0
offset_bottom = 838.0

[node name="scrollTexture" type="TextureRect" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_left = -86.0
offset_top = -141.0
offset_right = 794.0
offset_bottom = 859.0
scale = Vector2(0.95, 0.95)
texture = ExtResource("7_4v0sy")
expand_mode = 1

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 678.0
offset_bottom = 144.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 90
text = "Level Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 50.0
offset_top = 150.0
offset_right = 650.0
offset_bottom = 310.0

[node name="snd_levelup" type="AudioStreamPlayer2D" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_tex1y")
volume_db = -25.0
pitch_scale = 0.75

[node name="PlayerDeath" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 2500.0
offset_top = 178.0
offset_right = 3170.0
offset_bottom = 850.0
script = ExtResource("11_2noli")

[node name="scrollTexture" type="TextureRect" parent="GUILayer/GUI/PlayerDeath"]
layout_mode = 0
offset_left = -86.0
offset_top = -141.0
offset_right = 794.0
offset_bottom = 859.0
scale = Vector2(0.95, 0.95)
texture = ExtResource("7_4v0sy")
expand_mode = 1

[node name="btn_deathmenu" type="Button" parent="GUILayer/GUI/PlayerDeath"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -279.5
offset_top = -82.0
offset_right = 279.5
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_qxw7g")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.32549, 0.32549, 0.32549, 1)
theme_override_colors/font_hover_color = Color(0.32549, 0.32549, 0.32549, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 90
text = "Return to Menu"

[node name="lbl_playerDeath" type="Label" parent="GUILayer/GUI/PlayerDeath"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -334.0
offset_right = 334.0
offset_bottom = 117.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 90
text = "Game Over "
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_deathLevel" type="Label" parent="GUILayer/GUI/PlayerDeath"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 405.0
offset_top = 170.0
offset_right = 535.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(0, 0.784314, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 60
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_deathLevelConst" type="Label" parent="GUILayer/GUI/PlayerDeath"]
layout_mode = 0
offset_left = 60.0
offset_top = 170.0
offset_right = 410.0
offset_bottom = 280.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 60
text = "Reached Level:"
vertical_alignment = 1

[node name="lbl_deathTimer" type="Label" parent="GUILayer/GUI/PlayerDeath"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 405.0
offset_top = 260.0
offset_right = 535.0
offset_bottom = 370.0
theme_override_colors/font_color = Color(0, 0.784314, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 60
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_deathTimerConst" type="Label" parent="GUILayer/GUI/PlayerDeath"]
layout_mode = 0
offset_left = 60.0
offset_top = 260.0
offset_right = 410.0
offset_bottom = 370.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 60
text = "Survived For:"
vertical_alignment = 1

[node name="snd_playerdeath" type="AudioStreamPlayer2D" parent="GUILayer/GUI/PlayerDeath"]
unique_name_in_owner = true
stream = ExtResource("11_71vj4")
volume_db = -5.0

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 870.0
offset_top = 60.0
offset_right = 1050.0
offset_bottom = 112.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_u47mo")
theme_override_font_sizes/font_size = 65
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedAbilities" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 45.0
offset_right = 615.0
offset_bottom = 125.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = 127.0
offset_right = 615.0
offset_bottom = 207.0
columns = 10

[connection signal="timeout" from="Attack/RockShardTimer" to="." method="_on_rock_shard_timer_timeout"]
[connection signal="timeout" from="Attack/RockShardTimer/RockShardAttackTimer" to="." method="_on_rock_shard_attack_timer_timeout"]
[connection signal="timeout" from="Attack/WaterTornadoTimer" to="." method="_on_water_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/WaterTornadoTimer/WaterTornadoAttackTimer" to="." method="_on_water_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="pressed" from="GUILayer/GUI/PlayerDeath/btn_deathmenu" to="GUILayer/GUI/PlayerDeath" method="_on_btn_deathmenu_pressed"]

[editable path="HurtBox"]
